--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "lucide-react": "^0.503.0",
     "next": "^15.3.0",
     "openai": "^4.95.0",
     "tailwind-merge": "^3.2.0"
