onboarding responses saved to chromadb for future context

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/varnika/orchestrator"  ],
   "exclude": [
     "node_modules"
   ]
