--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-oauth/google": "^0.12.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "chromadb": "^2.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
