--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.503.0",
     "next": "^15.3.0",
     "openai": "^4.95.0",
+    "primereact": "^10.9.5",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
